CRUNCH-559: Enabling Spark integration tests
Signed-off-by: Micah Whitacre <mkwhit@gmail.com>